--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>울산 관광</title>
+    <link rel="icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@200;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta property="og:url" content="https://portulsan.netlify.app/">
+    <meta property="og:title" content="빛나는 울산, 빛나는 도시">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="img/main.png">
+    <meta property="og:description" content="공업도시 울산의 이미지를 벗고 관광도시로 거듭나기 위해, 새로운 발전을 도모합니다.">
 </head>
 <body>
     <div id="wrap">
